# openvps

./: README.md
openvps-admin/: .LICENSE.swp  Makefile.in  README  configure  configure.in  mkspec.in  openvps-admin.conf.in
openvps-admin/crontab/: Makefile.in  openvps-admin
openvps-admin/lib/python/: setup.py
openvps-admin/lib/python/openvps/admin/: __init__.py  cfg.py  dft.py.in
openvps-admin/rhinit/: Makefile.in  openvps-recv.in
openvps-admin/scripts/: Makefile.in  openvps-recv  ovacheckproc
openvps-admin/www/: Makefile.in
openvps-admin/www/conf/: Makefile.in  openvps-admin.conf.in
openvps-admin/www/html/: Makefile.in  index.py
openvps-admin/www/images/: Makefile.in  ovstyle.css
openvps-admin/www/templates/: Makefile.in  global_menu.html  login_body.html
openvps-common/: Makefile.in  NOTICE  README  configure  configure.in  mkspec.in
openvps-common/lib/python/: setup.py
openvps-common/lib/python/openvps/: __init__.py
openvps-common/lib/python/openvps/common/: RSASignedCookie.py  __init__.py  cfg.py  crypto.py  rrdutil.py  util.py
openvps-common/py-rrd/: Makefile.in  RRD.py  _RRD.c  setup.py
openvps-doc/: Makefile.in  appendixa.tex  chapter1.tex  configure  configure.in  copyright.tex  introduction.tex  openvps.tex
openvps-host/: Makefile.in  NOTICE  README  configure  configure.in  mkspec.in  openvps.conf.in
openvps-host/crontab/: Makefile.in  openvps.in
openvps-host/lib/python/: setup.py
openvps-host/lib/python/openvps/host/: __init__.py  cfg.py  dft.py.in  mon.py  vds.py  vsmon.py  vsutil.py
openvps-host/lib/python/openvps/host/distro/: CentOS.py  Distro.py  Fedora.py  RedHat.py  __init__.py  distro_util.py
openvps-host/lib/python/openvps/www/: __init__.py  panel.py
openvps-host/ohd/: Makefile.in  README  common.c  common.h.in  mount.c  ohdexec  sshd_config.in  traceroute  traceroute.c  umount.c
openvps-host/rhinit/: Makefile.in  ohd.in  openvps-mon.in  ovfixproc  ovresources  ovtc
openvps-host/scripts/: Makefile.in  openvps  openvps-configure  openvps-mon  ovbackup  ovcheckproc  ovcleanrebuilds  ovdisk  ovgenkey  ovraidcheck  ovuserfiles  postpost-stop  pre-start  prepre-start  ssh-pass
openvps-host/src/: Makefile.in
openvps-host/src/pace/: Makefile.in  pace.c
openvps-host/src/tunctl/: Makefile
openvps-host/src/wrapper/: Makefile.in  wrapper.c  wrapper.h.in
openvps-host/vspython/: README  _vserver.c  compat.h  config.h  setup.py  vserver.h  vserver.py
openvps-host/www/: Makefile.in
openvps-host/www/conf/: Makefile.in  openvps.conf.in
openvps-host/www/images/: Makefile.in  ovstyle.css
openvps-host/www/templates/: Makefile.in  block_body.html  bwidth_body.html  bwlimit_body.html  cpu_body.html  disk_body.html  fw_body.html  global_menu.html  main_frame.html  mem_body.html  navigation.html  rebuild_body.html  status_body.html
