#
# Copyright 2004 OpenHosting, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# $Id: configure.in,v 1.4 2005/09/27 20:52:19 grisha Exp $

AC_INIT

dnl Checks for programs. 

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# check for Python executable 

if test -z "$PYTHON_BIN"; then
  AC_PATH_PROG(PYTHON_BIN, python2.3)
  if test -z "$PYTHON_BIN"; then
    AC_PATH_PROG(PYTHON_BIN, python2.4)
    if test -z "$PYTHON_BIN"; then
       AC_MSG_ERROR(python binary not found in path)
    fi
  fi
fi
AC_SUBST(PYTHON)
PYTHON=`basename $PYTHON_BIN`

# find out python version

AC_MSG_CHECKING(Python version)
PyVERSION=`$PYTHON_BIN -c ['import sys; print sys.version[:3]'`]
AC_MSG_RESULT([$PyVERSION, fantastic.])

# make sure Python is version 2

if test "$PyVERSION" != "2.3"; then
   if test "$PyVERSION" != "2.4"; then
     AC_MSG_ERROR([This version of only works with Python version 2.3 and higher. The one you have seems to be $PyVERSION.])
   fi				   
fi

# check for apxs

AC_CHECKING(whether apxs is available)
AC_PATH_PROG(APXS, apxs)
if test -n "$APXS"; then
  AC_MSG_RESULT([found $APXS, good, assuming httpd is installed.])
fi

if test -z "$APXS"; then
  AC_MSG_ERROR([not found. This means httpd is not installed, please install Apache 2.x])
fi

# determine Apache LIBEXEC

AC_MSG_CHECKING(for Apache libexec directory)
LIBEXECDIR=`${APXS} -q LIBEXECDIR`
AC_MSG_RESULT($LIBEXECDIR)

# now check for mod_python in there

AC_MSG_CHECKING(for mod_python)
if test -x $LIBEXECDIR/mod_python.so; then
  AC_MSG_RESULT(found)
else
  AC_MSG_ERROR([mod_python.so is not installed in $LIBEXECDIR, please install mod_python])
fi

# now check for mod_ssl in there

AC_MSG_CHECKING(for mod_ssl)
if test -x $LIBEXECDIR/mod_ssl.so; then
  AC_MSG_RESULT(found)
else
  AC_MSG_ERROR([mod_ssl.so is not installed in $LIBEXECDIR, please install mod_ssl])
fi

# check for rrdtool

AC_PATH_PROG(RRDTOOL, rrdtool)
if test -z "$RRDTOOL"; then
  AC_MSG_ERROR([not found. Please install RRDTool])
fi

# check for bind

AC_PATH_PROG(NAMED, named)
if test -z "$NAMED"; then
  AC_MSG_ERROR([not found. Please install bind])
fi

# final output

AC_OUTPUT( Makefile mkspec rhinit/Makefile scripts/Makefile \
	   openvps-admin.conf rhinit/openvps-recv www/conf/openvps-admin.conf \
	   www/Makefile www/conf/Makefile www/images/Makefile  \
	   www/templates/Makefile www/html/Makefile lib/python/openvps/admin/dft.py \
	   crontab/Makefile)
