#
# Copyright 2004 OpenHosting, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# $Id: configure.in,v 1.4 2005/07/22 19:40:16 grisha Exp $

AC_INIT

dnl Checks for programs.                                                                                                                           
#AC_PROG_CC
#AC_PROG_INSTALL
AC_PROG_MAKE_SET

# check for Python executable
if test -z "$PYTHON_BIN"; then
  AC_PATH_PROG(PYTHON_BIN, python2.3)
  if test -z "$PYTHON_BIN"; then
    AC_PATH_PROG(PYTHON_BIN, python2.4)
    if test -z "$PYTHON_BIN"; then
       AC_MSG_ERROR(python binary not found in path)
    fi
  fi
fi
AC_SUBST(PYTHON)
PYTHON=`basename $PYTHON_BIN`

# find out python version                                                                                                                          
AC_MSG_CHECKING(Python version)
PyVERSION=`$PYTHON_BIN -c ['import sys; print sys.version[:3]'`]
PyMAJVERSION=`$PYTHON_BIN -c ['import sys; print sys.version[:1]'`]
AC_MSG_RESULT($PyVERSION)

# make sure Python is version 2                                                                                                                    
if test "$PyMAJVERSION" != "2"; then
  AC_MSG_ERROR([This version of only works with Python major version 2. The one you have seems to be $PyVERSION.])
fi

AC_OUTPUT(Makefile mkspec py-rrd/Makefile)

