#
# Copyright 2004 OpenHosting, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# $Id: configure.in,v 1.27 2008/09/20 17:09:13 grisha Exp $

AC_INIT

dnl Checks for programs. 

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# check for Python executable 

if test -z "$PYTHON_BIN"; then
  AC_PATH_PROG(PYTHON_BIN, python2.3)
  if test -z "$PYTHON_BIN"; then
    AC_PATH_PROG(PYTHON_BIN, python2.4)
    if test -z "$PYTHON_BIN"; then
       AC_MSG_ERROR(python binary not found in path)
    fi
  fi
fi
AC_SUBST(PYTHON)
PYTHON=`basename $PYTHON_BIN`

# find out python version

AC_MSG_CHECKING(Python version)
PyVERSION=`$PYTHON_BIN -c ['import sys; print sys.version[:3]'`]
AC_MSG_RESULT([$PyVERSION, fantastic.])

# make sure Python is version 2

if test "$PyVERSION" != "2.3"; then
   if test "$PyVERSION" != "2.4"; then
      AC_MSG_ERROR([This version of only works with Python version 2.3 or 2.4. The one you have seems to be $PyVERSION.])
   fi
fi

# check for apxs

AC_CHECKING(whether apxs is available)
AC_PATH_PROG(APXS, apxs)
if test -n "$APXS"; then
  AC_MSG_RESULT([found $APXS, outstanding, assuming httpd is installed.])
fi

if test -z "$APXS"; then
  AC_MSG_ERROR([not found. This means httpd is not installed, please install Apache 2.x])
fi

# determine Apache LIBEXEC

AC_MSG_CHECKING(for Apache libexec directory)
LIBEXECDIR=`${APXS} -q LIBEXECDIR`
AC_MSG_RESULT($LIBEXECDIR)

# now check for mod_python in there

AC_MSG_CHECKING(for mod_python)
if test -x $LIBEXECDIR/mod_python.so; then
  AC_MSG_RESULT(found, fabulous.)
else
  AC_MSG_ERROR([mod_python.so is not installed in $LIBEXECDIR, please install mod_python])
fi

# now check for mod_ssl in there

AC_MSG_CHECKING(for mod_ssl)
if test -x $LIBEXECDIR/mod_ssl.so; then
  AC_MSG_RESULT(found, spectacular.)
else
  AC_MSG_ERROR([mod_ssl.so is not installed in $LIBEXECDIR, please install mod_ssl])
fi

# check for vdlimit
AC_SUBST(VDLIMIT)
AC_CHECKING(whether vdlimit is available)
AC_PATH_PROG(VDLIMIT, vdlimit)
if test -n "$VDLIMIT"; then
  AC_MSG_RESULT([found $VDLIMIT, nice.])
fi

if test -z "$VDLIMIT"; then
  AC_MSG_ERROR([vdlimit not found. You need to use util-vserver 0.30.207 or newer (recommended), or install old vdlimit separately.])
fi

# check for rrdtool

#AC_PATH_PROG(RRDTOOL, rrdtool)
#if test -z "$RRDTOOL"; then
#  AC_MSG_ERROR([not found. Please install RRDTool])
#fi

# check for vserver kernel

AC_MSG_CHECKING(for VServer kernel)
VS=`uname -r | grep "vs"`
if test -z "$VS"; then
  AC_MSG_WARN([This is not a VServer kernel. You will need a Linux VServer kernel.])
else
  AC_MSG_RESULT([$VS, looks like a vserver kernel.])
fi

# check for vserver from util-vserver

#AC_CHECKING(whether vserver command is available)
AC_PATH_PROG(VSERVER, vserver)
if test -n "$VSERVER"; then
  AC_MSG_RESULT([found $VSERVER, cool.])
fi

if test -z "$VSERVER"; then
  AC_MSG_ERROR([not found. This means util-vserver probably is not installed])
fi

# check for bind

AC_PATH_PROG(NAMED, named)
if test -z "$NAMED"; then
  AC_MSG_ERROR([not found. Please install bind])
fi

AC_SUBST(OHD_USER)
AC_SUBST(OHD_PORT)
# XXX these chould be made ./configur-able
OHD_USER="ohd"
OHD_PORT="1012"

# final output

AC_OUTPUT(Makefile scripts/Makefile src/Makefile rhinit/Makefile mkspec \
		   rhinit/ohd rhinit/openvps-mon crontab/Makefile crontab/openvps \
		   www/Makefile www/conf/Makefile \
		   lib/python/openvps/host/dft.py openvps.conf ohd/Makefile \
		   ohd/common.h ohd/sshd_config src/pace/Makefile \
		   src/wrapper/wrapper.h src/wrapper/Makefile www/templates/Makefile \
		   www/images/Makefile www/conf/openvps.conf)
